# rust-wgpu-test

./: Cargo.toml
src/: common.rs  main.rs  shader.wgsl
