[package]
name = "rust-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bytemuck = "1.15.0"
cgmath = "0.18.0"
env_logger = "0.11.3"
futures = "0.3.30"
gfx-hal = "0.9.0"
log = "0.4.21"
pollster = "0.3.0"
rand = "0.8.5"
wgpu = "0.19.4"
winit = "0.29.15"
